Fix Feide login button on mobile devices. Fix diploma code.

--- a/src/css/modules/allcourseslist.less
+++ b/src/css/modules/allcourseslist.less
@@ -89,6 +89,10 @@
 .mmooc-button-primary {
   background-color: @darkTealColor;
   width:100px;
+  background-image: url(https://server/vector_images/Horisontal-hvit_Feide.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-origin: content-box;
 }
 
 .mmooc-button-secondary {
