--- a/src/css/modules/tabs.less
+++ b/src/css/modules/tabs.less
@@ -27,6 +27,10 @@
     width: 100%;
     height: 100%;
     background-color: @darkTealOpaque5;
+
+    .mmooc-button-ctr {
+      display: inline-flex;
+    }
   }
 }
 
